--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7",
     "socket.io": "^4.8.1"
   }
 }
